cmake_minimum_required(VERSION 3.22)
set(CMAKE_C_STANDARD 99)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ../executable_files)

project(01_01_stackspace C)
project(01_02_heapsapce1 C)
project(01_02_heapsapce2 C)
project(01_03_globalspace C)
project(01_04_FunctionCallModel C)
project(02_01_pointer1 C)
project(02_01_pointer2 C)
project(02_01_pointer3 C)
project(02_01_pointer4 C)
project(02_01_pointer5 C)
project(02_01_pointer6 C)
project(03_01_hexprintf C)
project(03_02_yuan_fan_bu_ma C)
project(04_01_one_dimensional_array_name C)
project(04_02_definition_method_of_array_pointer C)
project(04_03_2d_array_name C)
project(05_01_basic C)
project(05_02_assignment C)
project(05_03_exercise1 C)


add_executable(01_01_stackspace         01_memory_four_areas/01_stackspace.c)
add_executable(01_02_heapsapce1         01_memory_four_areas/02_heapsapce1.c)
add_executable(01_02_heapsapce2         01_memory_four_areas/02_heapsapce2.c)
add_executable(01_03_globalspace        01_memory_four_areas/03_globalspace.c)
add_executable(01_04_FunctionCallModel  01_memory_four_areas/04_FunctionCallModel.c)

add_executable(02_01_pointer1           02_pointer_advanced/01_pointer1.c)
add_executable(02_02_pointer2           02_pointer_advanced/02_pointer2.c)
add_executable(02_03_pointer3           02_pointer_advanced/03_pointer3.c)
add_executable(02_04_pointer4           02_pointer_advanced/04_pointer4.c)
add_executable(02_05_pointer5           02_pointer_advanced/05_pointer5.c)
add_executable(02_06_pointer6           02_pointer_advanced/06_pointer6.c)

add_executable(03_01_hexprintf          03_bit_operation/01_hexprintf.c)
add_executable(03_02_yuan_fan_bu_ma     03_bit_operation/02_yuan_fan_bu_ma.c)

add_executable(04_01_one_dimensional_array_name             04_array_advanced/01_one_dimensional_array_name.c)
add_executable(04_02_definition_method_of_array_pointer     04_array_advanced/02_definition_method_of_array_pointer.c)
add_executable(04_03_2d_array_name                          04_array_advanced/03_2d_array_name.c)

add_executable(05_01_basic              05_structure_advanced/01_basic.c)
add_executable(05_02_assignment         05_structure_advanced/02_assignment.c)
add_executable(05_03_exercise1          05_structure_advanced/03_exercise1.c)